# pirogue-admin-client

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-on-pypi.yml
debian/: changelog  control  copyright  maintscript  pirogue-admin-client.install  rules
pirogue_admin_client/: __init__.py  adapters.py  cli.py
src/: pirogue-admin-client
